package org.acme.DTO;

public record Endereco {
    Integer num, 
    String complemento, 
    String bairro, 
    String cidade, 
    String estado, 
    String cep
}