package org.acme.DTO;

public record Profissional {
    String senha, 
    String especialidade, 
    Formacao formacao
}