package org.acme.DTO;

public record Telefone {
    String codigoArea, 
    String numero
}